--- a/package.json
+++ b/package.json
@@ -16,11 +16,18 @@
     "src/desuite_frontend"
   ],
   "dependencies": {
+    "@tiptap/extension-color": "^2.10.0",
+    "@tiptap/extension-text-align": "^2.10.0",
+    "@tiptap/pm": "^2.10.0",
+    "@tiptap/react": "^2.10.0",
+    "@tiptap/starter-kit": "^2.10.0",
+    "@tiptap-pro/extension-export": "^2.16.3",
     "framer-motion": "^11.11.1",
     "lucide-react": "^0.447.0",
     "moment": "^2.30.1",
     "react-big-calendar": "^1.15.0",
     "react-hot-toast": "^2.4.1",
-    "recharts": "^2.12.7"
+    "recharts": "^2.12.7",
+    "sass": "^1.81.0"
   }
 }
